Added dynamic grid creation and colour picker

--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <h1>Welcome to Etch-a-Scetch!</h1>
     </header>
 
+    <div class="top">
+        <div class="colour-pickers">
+            <button class="red colour-picker"></button>
+            <button class="blue colour-picker"></button>
+            <button class="yellow colour-picker"></button>
+            <button class="green colour-picker"></button>
+            <button class="purple colour-picker"></button>
+            <button class="pink colour-picker"></button>
+            <button class="eraser colour-picker"></button>
+
+        </div>
+        <div class="user-input">
+            <label for="input">Maximum of 100</label>
+            <input class="input" type="text">
+            <button class="btn">Go</button>
+        </div>
+    </div>
+
     <div class="container">
         
     </div>
